[package]
name = "tera"
version = "0.1.0"
authors = ["BotchM <botchm@hotmail.com>"]
edition = "2018"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3"
ic-kit = "0.4.3"
sha3 = "0.9.1"
hex = "0.4.3"
serde = "1.0.130"
serde_bytes = "0.11"
num-bigint = "0.4.3"